--- a/all-tools.html
+++ b/all-tools.html
@@ -354,7 +354,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaaa
+                                Softwarewalaa
                             </a>
                             <br>
                             <br>
@@ -432,13 +432,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://amztools.org"> AMZ Tools</a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Softwarewalaa</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by Softwarewalaa <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
