--- a/bundles.html
+++ b/bundles.html
@@ -19,7 +19,7 @@
     <meta name="description"
         content="Explore affordable software bundles at World’s Best Tool Provider. Find high-quality solutions to boost productivity with one-click access.">
     <meta name="keywords"
-        content="software bundles, tool bundles, amz tools bundle, Agency bundles, product launch tools, comprehensive tool packages, educational bundles, business growth bundles, bundled software solutions, amazon tools bundle">
+        content="software bundles, tool bundles, Softwarewalaa bundle, Agency bundles, product launch tools, comprehensive tool packages, educational bundles, business growth bundles, bundled software solutions, amazon tools bundle">
     <!-- Add other common meta tags here -->
 
 
@@ -273,19 +273,19 @@
                 <div class="col-12 col-md-6  align-self-center text-center item">
                     <div class="card w-100">
                         <i class="icon icon-fire"></i>
-                        <h4>Agency plan</h4>
-                        <span class="price"><i>₹ 600/ $8 For 1 Month</i> </span>
-                        <span class="price"><i>₹ 999/ $12 For 2 Months</i> </span>
-                        <span class="price"><i> ₹ 3000/ $36 For 12 Months</i> </span>
+                        <h4>E-Commerce plan</h4>
+                        <span class="price"><i>₹ 1500/ $18 For 1 Month</i> </span>
+                        <span class="price"><i>₹ 5000/ $60 For 6 Months</i> </span>
+                        <span class="price"><i> ₹ 7000/ $84 For 12 Months</i> </span>
                         <!-- <span class="price"><i>$</i>199</span> -->
 
                         <ul class="list-group list-group-flush ">
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Helium 10</span>
+                                <span>Helium 10 (Web + Extension)</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Jungle Scout</span>
+                                <span>Jungle Scout (Web + Extension)</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
@@ -365,7 +365,7 @@
                                     <h5>Choose Pricing Option:</h5>
                                     <div class="d-flex flex-wrap gap-2 justify-content-center">
                                         <button class="btn btn-outline-primary pricing-btn" id="monthly-btn" data-price="month">1 Month</button>
-                                        <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">2 Month</button>
+                                        <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">6 Month</button>
                                         <button class="btn btn-outline-primary pricing-btn" id="yearly-btn" data-price="yearly">12 Month</button>
                                     </div>
                                 </div>
@@ -483,7 +483,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaaa
+                                Softwarewalaa
                             </a>
                             <br>
                             <br>
@@ -561,13 +561,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://amztools.org"> AMZ Tools </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Softwarewalaa </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by Softwarewalaa <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
