--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Contact us - Softwarewalaaa</title>
+    <title>Contact us - Softwarewalaa</title>
 
 
     <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
@@ -229,14 +229,14 @@
                         Gujarat - 395003</address>
                     <h4>Phone Number</h4>
                     <!-- <p>9992295288</p> -->
-                    <a href="tel:8200891775" class="nav-link">
+                    <a href="tel:9558635166" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
-                        8200891775
+                        9558635166
                     </a>
                     <h4>Email</h4>
-                    <a href="mailto:moinchandiwala95@gmail.com" class="nav-link">
+                    <a href="mailto:softwerewalaa@gmail.com" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
-                        moinchandiwala95@gmail.com
+                        softwerewalaa@gmail.com
                     </a>
                 </div>
 
@@ -292,7 +292,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaaa
+                                Softwarewalaa
                             </a>
                             <br>
                             <br>
@@ -370,13 +370,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://amztools.org">AMZ Tools</a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/">Softwarewalaa</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.</p>
+                        <p>© 2024 Copyright | All Rights Reserved by Softwarewalaa <a href="#" target="_blank"></a>.</p>
                     </div>
                 </div>
             </div>
