--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description"
         content="Shop 20+ affordable, high-quality tools with one-click access at World’s Best Tool Provider. Quality equipment for hobbyists and professionals.">
     <meta name="keywords"
-        content="Softwarewalaaa, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
+        content="Softwarewalaa, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
     <link rel="canonical" href="https://www.softwarewalaa.com/" />
 
 
@@ -240,14 +240,14 @@
                         alt="Hero Image">
                     <div class="slide-content row" data-mask-768="80">
                         <div class="col-12 d-flex inner">
-                            <div class="left align-self-center text-center text-md-left">
+                            <div class="left align-self-center text-left text-md-left">
                                 <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title effect-static-text">
                                     World Best Tool Provider.</h1>
                                 <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Affordably purchase
-                                    more than 35+ Tools for people who are unable to purchase price equipment. One Click
+                                    more than 20+ Tools for people who are unable to purchase price equipment. One Click
                                     to access is a Straight forward access method for our tools. I hope this system
                                     works
-                                    for you.</p>
+                                    for you.</p>>
                                 <!-- <a href="#contact" data-aos="zoom-out-up" data-aos-delay="1200"
                                     class="smooth-anchor ml-auto mr-auto ml-md-0 mt-4 btn primary-button" ><i
                                         class="icon-cup"></i>GET STARTED</a> -->
@@ -290,7 +290,7 @@
                 <div class="col-12 col-md-6 pl-md-5 align-self-center text-center text-md-left">
                     <div class="row intro">
                         <div class="col-12 p-0">
-                            <h2>Tools Power Your Progress</h2>
+                            <h2>Softwarewalaa Power Your Progress</h2>
                             <p>Unlock endless possibilities with Softwarewalaa. Our innovative digital tool streamline your workflow, boost productivity, and drive your business success. Embrace the future with us today!</p>
                         </div>
                     </div>
@@ -368,19 +368,19 @@
                 <div class="col-12 col-md-6  align-self-center text-center item">
                     <div class="card w-100">
                         <i class="icon icon-fire"></i>
-                        <h4>Agency plan</h4>
-                        <span class="price"><i>₹ 600/ $8 For 1 Month</i> </span>
-                        <span class="price"><i>₹ 999/ $12 For 2 Months</i> </span>
-                        <span class="price"><i> ₹ 3000/ $36 For 12 Months</i> </span>
+                        <h4>E-Commerce plan</h4>
+                        <span class="price"><i>₹ 1500/ $18 For 1 Month</i> </span>
+                        <span class="price"><i>₹ 5000/ $60 For 6 Months</i> </span>
+                        <span class="price"><i> ₹ 7000/ $84 For 12 Months</i> </span>
                         <!-- <span class="price"><i>$</i>199</span> -->
 
                         <ul class="list-group list-group-flush ">
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Helium 10</span>
+                                <span>Helium 10 (Web + Extension)</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
-                                <span>Jungle Scout</span>
+                                <span>Jungle Scout (Web + Extension)</span>
                                 <i class="icon-min m-0 icon-check text-right"></i>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center text-left">
@@ -514,7 +514,7 @@
                             <h5>Choose Pricing Option:</h5>
                             <div class="d-flex flex-wrap gap-2 justify-content-center">
                                 <button class="btn btn-outline-primary pricing-btn" id="monthly-btn" data-price="month">1 Month</button>
-                                <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">2 Month</button>
+                                <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">6 Month</button>
                                 <button class="btn btn-outline-primary pricing-btn" id="yearly-btn" data-price="yearly">12 Month</button>
                             </div>
                         </div>
@@ -650,7 +650,7 @@
                     <h4>Clients</h4>
                 </div>
                 <div class="col-auto item counter-container">
-                    <h2 class="animated-counter" data-target="20">35</h2>
+                    <h2 class="animated-counter" data-target="20">20</h2>
                     <h4>Tools</h4>
                 </div>
             </div>
@@ -998,7 +998,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaaa
+                                Softwarewalaa
                             </a>
                             <br>
                             <br>
@@ -1076,13 +1076,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://amztools.org">AMZ Tools</a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/">softwarewalaa</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
