fix video thumb

--- a/index.html
+++ b/index.html
@@ -281,17 +281,19 @@
             <div class="row">
                 <div class="gallery col-12 col-md-6">
                     <a data-poster="https://leverage-html.codings.dev/assets/images/about-14.jpg"
-                        href="https://youtu.be/2dRokG3iYVc">
+                        href="https://www.youtube.com/watch?v=b8WLuxAwylM">
                         <i class="play-video icon-control-play"></i>
                         <div class="mask-radius"></div>
-                        <img src="./assets/images/thumbnail.jpg" class="fit-image" alt="Institutional">
+                        <img src="assets/images/introvideo.jpeg" class="fit-image" alt="Institutional">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 pl-md-5 align-self-center text-center text-md-left">
                     <div class="row intro">
                         <div class="col-12 p-0">
                             <h2>Softwarewalaa Power Your Progress</h2>
-                            <p>Unlock endless possibilities with Softwarewalaa. Our innovative digital tool streamline your workflow, boost productivity, and drive your business success. Embrace the future with us today!</p>
+                            <p>Unlock endless possibilities with Softwarewalaa.com. Our innovative digital tools
+                                streamline your workflow, boost productivity, and drive your business success. Embrace
+                                the future with us today!</p>
                         </div>
                     </div>
                     <!--                    <div class="row items">-->
