--- a/bundles.html
+++ b/bundles.html
@@ -102,7 +102,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
+                    <img src="./assets/images/logo.png" alt="Softwarewala">
 
                 </a>
 
@@ -137,7 +137,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://amztoolshub.com/amember/member"
+                            <a target="_blank" href="https://amztools.org/data/member"
                                 class="btn ml-lg-auto primary-button  w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -192,7 +192,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button">
                             <i class="icon-login"></i>
                             Login</a>
@@ -482,7 +482,7 @@
                 <div class="row items footer-widget content">
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
-                            <a href="https://softwarewalaa.com" class="logo">
+                            <a href="#" class="logo">
                                 Softwarewalaa
                             </a>
                             <br>
@@ -561,7 +561,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Softwarewalaa </a></p>
+                        <p>Designed with ❤️ by <a href="#"> Softwarewalaa </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
