--- a/contact-us.html
+++ b/contact-us.html
@@ -95,7 +95,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
+                    <img src="./assets/images/logo.png" alt="Softwarewala">
 
                 </a>
 
@@ -130,7 +130,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://amztoolshub.com/amember/member"
+                            <a target="_blank" href="https://amztools.org/data/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -185,7 +185,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -217,7 +217,7 @@
 
 
     <!-- Contact -->
-    <section id="contact-section" class="section-6 form featured left">
+    <section id="contact-section" class="section-6 form featured center left">
         <div class="container">
             <h2 class="featured alt mb-4">Contact Us</h2>
             <!-- <div class="flex align-items-center justify-content-center flex-wrap"> -->
@@ -234,13 +234,13 @@
                         9558635166
                     </a>
                     <h4>Email</h4>
-                    <a href="mailto:softwerewalaa@gmail.com" class="nav-link">
+                    <a href="mailto:moinchandiwala95@gmail.com" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
-                        softwerewalaa@gmail.com
+                        moinchandiwala95@gmail.com
                     </a>
                 </div>
 
-                <form id="contact-form" class="multi-step-form col-lg-6 col-md-12  ">
+                <!-- <form id="contact-form" class="multi-step-form col-lg-6 col-md-12  ">
                     <div class="row">
                         <div class="col-12 input-group p-0">
                             <input type="email" name="email" data-minlength="3" class="form-control field-email"
@@ -258,13 +258,13 @@
                             <input type="tel" name="phoneNumber" data-minlength="3" class="form-control field-phone"
                                 placeholder="Phone Number" pattern="[0-9]{10}" required>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- <div class="row">
                 <div class="col-12 input-group p-0">
                     <input type="text" name="address" data-minlength="3" class="form-control field-address" placeholder="Office Address" required>
                 </div>
             </div> -->
-                    <div class="row">
+                    <!-- <div class="row">
                         <textarea name="message" data-minlength="3" class="form-control field-message"
                             placeholder="Message" required></textarea>
                     </div>
@@ -272,7 +272,7 @@
                         <button type="submit" class="btn primary-button w-100">SEND<i
                                 class="icon-arrow-right-circle left"></i></button>
                     </div>
-                </form>
+                </form> -->
 
 
             </div>
@@ -291,7 +291,7 @@
                 <div class="row items footer-widget content">
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
-                            <a href="https://softwarewalaa.com" class="logo">
+                            <a href="#" class="logo">
                                 Softwarewalaa
                             </a>
                             <br>
@@ -370,7 +370,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/">Softwarewalaa</a></p>
+                        <p>Designed with ❤️ by <a href="#">Softwarewalaa</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
