--- a/refund-and-cancellation.html
+++ b/refund-and-cancellation.html
@@ -94,7 +94,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
+                    <img src="./assets/images/logo.png" alt="Softwarewala">
 
                 </a>
 
@@ -129,7 +129,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://amztoolshub.com/amember/member"
+                            <a target="_blank" href="https://amztools.org/data/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -184,7 +184,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -228,7 +228,7 @@
 
             <div class="card-body">
                 <p>
-                    We made the entire site available to inexperienced bloggers, marketers, designers, and developers
+                    We made the entire site available to amazon sellers and dropshippers
                     who couldn’t afford premium tools. We are always dedicated to providing the best services and
                     maintaining a high level of uptime while remaining within your budget
                 </p>
@@ -260,7 +260,7 @@
                 <div class="row items footer-widget content">
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
-                            <a href="https://softwarewalaa.com" class="logo">
+                            <a href="#" class="logo">
                                 Softwarewalaa
                             </a>
                             <br>
@@ -339,7 +339,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Softwarewalaa </a></p>
+                        <p>Designed with ❤️ by <a href="#"> Softwarewalaa </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
