--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -226,25 +226,25 @@
             <div class="card-body">
                 <p>
 
-                    By using Softwarewala and completing an order, you attest that you understand and agree to be
+                    By using Softwarewalaa and completing an order, you attest that you understand and agree to be
                     governed by the terms and conditions listed in the Terms of Use section below. These terms govern
                     your use of the whole website as well as any emails and other correspondence that you may have with
-                    Jupiter Seo Tool. The Jupiter Seo Tool team disclaims all liability for any direct, indirect,
+                    AMZ Tool. The AMZ Tool team disclaims all liability for any direct, indirect,
                     special, incidental, or consequential damages that may result from using or not using the materials
                     on this website, including but not limited to loss of data or profit. This disclaimer applies even
-                    if the Jupiter Seo Tool team or an authorized representative has been made aware of the possibility
+                    if the AMZ Tool team or an authorized representative has been made aware of the possibility
                     of such damages. You are responsible for any expenses associated with servicing, repairing, or
-                    correcting equipment or data as a result of using materials from this website. Jupiter Seo Tool
+                    correcting equipment or data as a result of using materials from this website. AMZ Tool
                     disclaims all liability for any consequences that may arise from using our resources.We maintain the
                     right to alter the costs and the guidelines for using our resources at any time.
                 </p>
                 <p>
-                    Billing Softwarewala not charge recursive fee. All transactions are initiated by user also we do
+                    Billing Softwarewalaa not charge recursive fee. All transactions are initiated by user also we do
                     not save any billing related data. We use third party payment gateways such as razorpay & cc avenue
                     to process all orders.
                 </p>
                 <p>
-                    Services Softwarewala has right to change the price and validity of any service at any time. Also
+                    Services Softwarewalaa has right to change the price and validity of any service at any time. Also
                     we can impose limits on any tool depends on the availability
                 </p>
 
@@ -255,21 +255,21 @@
                 </p>
 
                 <p>
-                    Account Ban If user shares his/her account details with other people, then Softwarewala has right
+                    Account Ban If user shares his/her account details with other people, then Softwarewalaa has right
                     to permanently ban user account without any notification. Multiple logins from same IP (using proxy
                     or same ISP) in same day can result account suspension.
 
                 </p>
                 <p>
-                    Important Softwarewala never allow accessing our website source code, reverse engineering on our
-                    extension/website. Softwarewala never allow to use cookies manager extension if you want to use
-                    then remove our extension and logout from Softwarewala.
+                    Important Softwarewalaa never allow accessing our website source code, reverse engineering on our
+                    extension/website. Softwarewalaa never allow to use cookies manager extension if you want to use
+                    then remove our extension and logout from Softwarewalaa.
                 </p>
 
                 <p>
 
                     There no refund if you contact after 30 days on order placement date. Don't matter you not received
-                    product or your account is not active or you not able to use. Softwarewala required Anydesk or
+                    product or your account is not active or you not able to use. Softwarewalaa required Anydesk or
                     Teamviewer for Technical Support
                 </p>
             </div>
@@ -287,7 +287,7 @@
                 <div class="row items footer-widget content">
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
-                            <a href="https://softwarewalaa.com" class="logo">
+                            <a href="#" class="logo">
                                 Softwarewalaa
                             </a>
                             <br>
@@ -366,13 +366,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Softwarewalaa.com </a></p>
+                        <p>Designed with ❤️ by <a href="#"> Softwarewalaa </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa.com <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
