--- a/users.html
+++ b/users.html
@@ -94,7 +94,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
+                    <img src="./assets/images/logo.png" alt="Softwarewala">
 
                 </a>
 
@@ -129,7 +129,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://amztoolshub.com/amember/member"
+                            <a target="_blank" href="https://amztools.org/data/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -184,7 +184,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
