--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
+                    <img src="./assets/images/logo.png" alt="Softwarewala">
 
                 </a>
 
@@ -142,7 +142,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item mt-3 w-100">
-                        <a class="" target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a class="" target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button w-100">
                             <i class="icon-login"></i>
                             Login</a>
@@ -197,7 +197,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://amztoolshub.com/amember/member"
+                        <a target="_blank" href="https://amztools.org/data/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -256,7 +256,7 @@
                                 <div style="gap: 20px; flex-wrap: wrap;"
                             0        class="d-flex align-items-center justify-content-md-start justify-content-center w-max  mt-4 f">
 
-                                    <a target="_blank" href="https://amztoolshub.com/amember/member"
+                                    <a target="_blank" href="https://amztools.org/data/member"
                                         class="btn  primary-button ">
                                         <i class="icon-login"></i>
                                         Login</a>
@@ -290,10 +290,8 @@
                 <div class="col-12 col-md-6 pl-md-5 align-self-center text-center text-md-left">
                     <div class="row intro">
                         <div class="col-12 p-0">
-                            <h2>Softwarewalaa Power Your Progress</h2>
-                            <p>Unlock endless possibilities with Softwarewalaa.com. Our innovative digital tools
-                                streamline your workflow, boost productivity, and drive your business success. Embrace
-                                the future with us today!</p>
+                            <h2>Tools Power Your Progress</h2>
+                            <p>Unlock endless possibilities with Toolswala. Our innovative digital tool streamline your workflow, boost productivity, and drive your business success. Embrace the future with us today!</p>
                         </div>
                     </div>
                     <!--                    <div class="row items">-->
@@ -648,7 +646,7 @@
             </div>
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-auto item counter-container">
-                    <h2 class="animated-counter" data-target="500">500</h2>
+                    <h2 class="animated-counter" data-target="500">1000</h2>
                     <h4>Clients</h4>
                 </div>
                 <div class="col-auto item counter-container">
@@ -999,7 +997,7 @@
                 <div class="row items footer-widget content">
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
-                            <a href="https://softwarewalaa.com" class="logo">
+                            <a href="#" class="logo">
                                 Softwarewalaa
                             </a>
                             <br>
@@ -1078,7 +1076,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/">softwarewalaa</a></p>
+                        <p>Designed with ❤️ by <a href="#">softwarewalaa</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
